# innorangepi

./: .gitignore  instru.c  instrumentation  instrumentation123  instrumentation_main.c  mycurl  mycurl.c  readme.md
DataSender/: DataSender  DataSenderTest  DataSenderTest.cpp  DataTest  GETDataSender.cpp  GETDataSender.hpp  IDataSender.hpp  MQTTDataSender.cpp  MQTTDataSender.hpp  SocketDataSender.cpp  SocketDataSender.hpp  curl.cpp  datatest.cpp  mqtt  mqtt.cpp
DataSender/broker.hivemq.com-1883-paho-cpp-data-publish/: s-759  s-760  s-761  s-762  s-763  s-764  s-765  s-766  s-767  s-768  s-769  s-770  s-771  s-772  s-773  s-774  s-775  s-776  s-777  s-778  s-779  s-780  s-781  s-782  s-783  s-784  s-785  s-786  s-787  s-788  s-789  s-790  s-791  s-792  s-793  s-794  s-795  s-796  s-797  s-798  (+55 more)
Instrumentation/: instrumentation.cpp
Sockets/: client  client.c  client_reads_data  client_reads_data.c  instrumentation_server.c  server  server.c  server_provides_data  server_provides_data.c  sock.h
original-version/: ADS1115.c  ApplicationManager.c  ApplicationManager.h  BatteryMonitor.c  BatteryMonitor.h  CMakeLists.txt  CalibrationHelper.c  CalibrationHelper.h  ConfigurationLoader.c  ConfigurationLoader.h  CsvLogger.c  CsvLogger.h  HardwareManager.c  HardwareManager.h  LineProtocol.c  LineProtocol.h  Measurement.c  Measurement.h  OfflineQueue.c  OfflineQueue.h  README.txt  Sender.c  Sender.h  SharedData.h  SocketServer.c  config-nova-A.txt  config.txt  configA  configA.txt  configApre.txt  configArariboia  configB  configB.txt  configBike  configBlank  configC.txt  configD.txt  gps_example.c  instrumentation-app  instrumentation_main.c  (+2 more)
original-version/Docs/: GuiaCalibracao.txt
